<resources>
    <string name="app_name">Cartrack Coding Challenge</string>

    <!-- Log In Activity -->
    <string name="log_in_title">Log In</string>
    <string name="log_in_button">Log In</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="country_label">Country</string>
    <string name="username_error_username_cannot_be_empty">*Username cannot be empty</string>
    <string name="password_error_password_cannot_be_empty">*Password cannot be empty</string>


    <!-- User List Activity -->
    <string name="title_user_list">Users</string>

    <!-- User Detail Activity -->
    <string name="title_user_detail">User Detail</string>

    <!-- User Detail Fragment -->
    <string name="user_detail_name">Name</string>
    <string name="user_detail_username">Username</string>
    <string name="user_detail_email">Email</string>
    <string name="user_detail_address">Address</string>
    <string name="user_detail_location">Location</string>
    <string name="user_detail_phone_number">Phone Number</string>
    <string name="user_detail_website">Website</string>
    <string name="user_detail_company">Company</string>

</resources>
