<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <LinearLayout
                android:id="@+id/ll_login_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/login_container_horizontal_margin"
                android:layout_marginTop="@dimen/login_container_vertical_margin"
                android:layout_marginRight="@dimen/login_container_horizontal_margin"
                android:layout_marginBottom="@dimen/login_container_vertical_margin"
                android:background="@drawable/background_card_log_in"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_edit_text_height"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_double_margin"
                    android:background="@drawable/background_edit_text_log_in"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:hint="@string/username_label"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin" />

                <TextView
                    android:id="@+id/tv_username_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:textColor="@color/text_color_error"
                    android:textSize="@dimen/text_size_medium" />


                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_edit_text_height"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/background_edit_text_log_in"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:hint="@string/password_label"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin" />

                <TextView
                    android:id="@+id/tv_password_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:textColor="@color/text_color_error"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/activity_horizontal_double_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_double_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/country_label"
                    android:textColor="@color/text_color_lighter"
                    android:textSize="@dimen/text_size_large" />

                <com.hbb20.CountryCodePicker
                    android:id="@+id/country_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    app:ccp_defaultNameCode="SG"
                    app:ccp_showFullName="true"
                    app:ccp_showNameCode="false"
                    app:ccp_showPhoneCode="false" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_button_height"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_double_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_double_margin"
                    android:background="@drawable/background_button_log_in_enabled"
                    android:text="@string/log_in_button"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color_white"
                    android:textSize="@dimen/text_size_mlarge" />

            </LinearLayout>

        </ScrollView>


    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>